Add rust backend

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,45 +1,60 @@
 cmake_minimum_required(VERSION 3.16)
 
-project(EbookTest VERSION 0.1 LANGUAGES CXX)
-
+project(RustEbookManger VERSION 0.1 LANGUAGES CXX)
+set(CMAKE_PREFIX_PATH "/home/johandost/Qt/6.4.2/gcc_64/lib/cmake")
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_INCLUDE_CURRENT_DIR ON)
 set(CMAKE_AUTOMOC ON)
+set(CMAKE_AUTOUIC ON)
+set(CMAKE_AUTORCC ON)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_EXPORT_COMPILE_COMMANDS true)
 
-find_package(Qt6 6.2 COMPONENTS Widgets Core Quick Core5Compat REQUIRED)
-find_package(Qt6 6.2 COMPONENTS WebView Sql)
+set(CLIENT_LIB_DIR ${CMAKE_SOURCE_DIR}/rust/client_lib)
+set(CLIENT_LIB_CARGO ${CLIENT_LIB_DIR}/Cargo.toml)
+set(CLIENT_LIB_SRC ${CLIENT_LIB_DIR}/src)
+
+set(CPP_DIR ${CMAKE_SOURCE_DIR}/cpp)
+set(RUST_BRIDGE_CPP ${CPP_DIR}/rust_bridge.cpp)
+set(H_DIR ${CMAKE_SOURCE_DIR}/headers)
+set(RUST_BRIDGE_HEADER ${H_DIR}/rust_bridge.h)
+
+
+
+find_package(Qt6Core REQUIRED)
+find_package(Qt6Widgets REQUIRED)
+find_package(WrapOpenGL REQUIRED)
+find_package(Qt6 REQUIRED COMPONENTS Gui)
+qt_standard_project_setup()
+find_package(Qt6Quick REQUIRED)
 find_package(Corrosion REQUIRED)
-qt_add_executable(appEbookTest
+
+include(corrosion_cxx.cmake)
+
+qt_add_executable(EbookTest
     cpp/main.cpp
     cpp/homemodel.cpp
-
-    headers/homemodel.h
-)
-
-qt_add_qml_module(appEbookTest
-    URI EbookTest
-    VERSION 1.0
-    QML_FILES 
-        qml/main.qml 
-        qml/HomeView.qml 
-        qml/LibraryView.qml 
+        cpp/librarymodel.cpp
+        cpp/homemodel.h
+        qml/main.qml
+        qml/HomeView.qml
+        qml/LibraryView.qml
         qml/EpubReader.qml
-)
 
-set_target_properties(appEbookTest PROPERTIES
-    MACOSX_BUNDLE_GUI_IDENTIFIER my.example.com
-    MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
-    MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
-    MACOSX_BUNDLE TRUE
-    WIN32_EXECUTABLE TRUE
-)
+        cpp/librarymodel.cpp cpp/librarymodel.h cpp/rustutil.cpp cpp/rustutil.h)
 
-corrosion_import_crate(MANIFEST_PATH /home/johan/Programmering/EbookTest/rust/client_lib/Cargo.toml
-)
 
-target_link_libraries(appEbookTest
+
+add_library_rust(PATH rust/client_lib NAMESPACE my)
+
+target_link_libraries(EbookTest
+        PUBLIC
+        my::client_lib
     PRIVATE Qt6::Quick
+        ssl
+        crypto
     Qt6::Core
-    
+    Qt6::Widgets
     PUBLIC client_lib)
 
-install(TARGETS appEbookTest BUNDLE DESTINATION .)
+#install(TARGETS EbookTest BUNDLE DESTINATION .)
