Add audiobook prototype

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,9 @@
 cmake_minimum_required(VERSION 3.16)
 
 project(RustEbookManger VERSION 0.1 LANGUAGES CXX)
-set(CMAKE_PREFIX_PATH "/home/johandost/Qt/6.4.2/gcc_64/lib/cmake")
+set(HOME_DIR $ENV{HOME})
+set(CMAKE_PREFIX_PATH "${HOME_DIR}/.config/Qt-dev/6.4.2/gcc_64/lib/cmake")
+#set(CMAKE_PREFIX_PATH "/home/johandost/Qt/5.15.2/gcc_64/lib/cmake")
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 set(CMAKE_AUTOMOC ON)
@@ -20,43 +22,20 @@ set(H_DIR ${CMAKE_SOURCE_DIR}/headers)
 set(RUST_BRIDGE_HEADER ${H_DIR}/rust_bridge.h)
 
 
-
-find_package(Qt6Core REQUIRED)
-find_package(Qt6Widgets REQUIRED)
-find_package(WrapOpenGL REQUIRED)
-find_package(Qt6WebView REQUIRED)
-find_package(Qt6 REQUIRED COMPONENTS Gui)
-qt_standard_project_setup()
-find_package(Qt6Quick REQUIRED)
+find_package(Qt6 COMPONENTS Core Gui Quick WebView QuickControls2 Multimedia Core5Compat Pdf REQUIRED)
 find_package(Corrosion REQUIRED)
 
 include(corrosion_cxx.cmake)
 
-qt_add_executable(EbookTest
-    cpp/main.cpp
-    cpp/homemodel.cpp
-        cpp/librarymodel.cpp
-        cpp/homemodel.h
-        qml/main.qml
-        qml/HomeView.qml
-        qml/LibraryView.qml
-        qml/EpubReader.qml
+#print CMAKE_SOURCE_DIR
+message(STATUS "CMAKE_SOURCE_DIR: ${CMAKE_SOURCE_DIR}/qml/lib/QtAV")
+#set(QML_IMPORT_PATH ${CMAKE_SOURCE_DIR}/qml/lib/QtAV ${CMAKE_BINARY_DIR}/imports CACHE STRING "" FORCE)
 
-        cpp/librarymodel.cpp cpp/librarymodel.h cpp/rustutil.cpp cpp/rustutil.h)
-
-
-
+qt_add_executable(EbookTest cpp/main.cpp cpp/homemodel.cpp cpp/librarymodel.cpp cpp/homemodel.h cpp/rustutil.cpp cpp/rustutil.h
+        qml/main.qml qml/HomeView.qml qml/LibraryView.qml qml/EpubReader.qml)
 add_library_rust(PATH rust/client_lib NAMESPACE my)
-
 target_link_libraries(EbookTest
-        PUBLIC
-        my::client_lib
-    PRIVATE Qt6::Quick
-        ssl
-        crypto
-    Qt6::Core
-    Qt6::Widgets
-        Qt6::WebView
-    PUBLIC client_lib)
+        PUBLIC my::client_lib
+        PRIVATE Qt6::Quick Qt6::Core Qt6::WebView Qt6::Multimedia Qt6::Pdf Qt6::Core5Compat ssl)
 
-#install(TARGETS EbookTest BUNDLE DESTINATION .)
+
