--- a/rust/client_lib/Cargo.toml
+++ b/rust/client_lib/Cargo.toml
@@ -20,6 +20,7 @@ epub = "2.0.0"
 resize = "0.7.4"
 image = "0.24.5"
 audiotags = "0.4.1"
+pdf = "0.8.0"
 [dependencies.uuid]
 version = "1.2.2"
 features = [
