--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,8 @@ set(RUST_BRIDGE_CPP ${CPP_DIR}/rust_bridge.cpp)
 set(H_DIR ${CMAKE_SOURCE_DIR}/headers)
 set(RUST_BRIDGE_HEADER ${H_DIR}/rust_bridge.h)
 
+set(ENV{RUST_BACKTRACE} 1)
+
 
 find_package(Qt6 COMPONENTS Core Gui Quick WebView QuickControls2 Pdf REQUIRED)
 find_package(Corrosion REQUIRED)
@@ -37,5 +39,3 @@ add_library_rust(PATH rust/client_lib NAMESPACE my)
 target_link_libraries(EbookTest
         PUBLIC my::client_lib
         PRIVATE Qt6::Quick Qt6::Core Qt6::WebView Qt6::Pdf ssl)
-
-
