--- a/rust/client_lib/Cargo.toml
+++ b/rust/client_lib/Cargo.toml
@@ -19,9 +19,7 @@ futures = "0.3"
 epub = "2.0.0"
 resize = "0.7.4"
 image = "0.24.5"
-audiotags = "0.4.1"
-env_logger = "0.10.0"
-log = "0.4.0"
+
 pdf = "0.8.0"
 [dependencies.uuid]
 version = "1.2.2"
@@ -35,3 +33,8 @@ cxx-build = "1.0"
 
 [lib]
 crate-type=["staticlib"]
+
+# Unused crates
+#audiotags = "0.4.1"
+#env_logger = "0.10.0"
+#log = "0.4.0"
