--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.16)
 
 project(RustEbookManger VERSION 0.1 LANGUAGES CXX)
 set(HOME_DIR $ENV{HOME})
-
+set(CMAKE_PREFIX_PATH ${HOME_DIR}/.config/Qt/6.4.2/gcc_64/lib/cmake)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 set(CMAKE_AUTOMOC ON)
@@ -20,7 +20,7 @@ set(RUST_BRIDGE_CPP ${CPP_DIR}/rust_bridge.cpp)
 set(H_DIR ${CMAKE_SOURCE_DIR}/headers)
 set(RUST_BRIDGE_HEADER ${H_DIR}/rust_bridge.h)
 
-set(ENV{RUST_BACKTRACE} 1)
+set(ENV{RUST_BACKTRACE} 0)
 
 
 find_package(Qt6 COMPONENTS Core Gui Quick QuickControls2 REQUIRED)
