--- a/rust/client_lib/Cargo.toml
+++ b/rust/client_lib/Cargo.toml
@@ -14,6 +14,9 @@ directories = "4.0.1"
 walkdir = "2.3.2"
 lazy_static = "1.4.0"
 
+
+tokio = { version = "1.25.0", features = ["full"] }
+
 rusqlite = { version = "0.28.0", features = ["bundled"] }
 futures = "0.3"
 epub = "2.0.0"
