--- a/rust/client_lib/Cargo.toml
+++ b/rust/client_lib/Cargo.toml
@@ -22,7 +22,7 @@ futures = "0.3"
 epub = "2.0.0"
 resize = "0.7.4"
 image = "0.24.5"
-
+once_cell = "1.17.1"
 pdf = "0.8.0"
 [dependencies.uuid]
 version = "1.2.2"
