--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required(VERSION 3.16)
 
 project(RustEbookManger VERSION 0.1 LANGUAGES CXX)
 set(HOME_DIR $ENV{HOME})
+set(CMAKE_PREFIX_PATH "${HOME_DIR}/.config/Qt-Dev/6.4.2/wasm32/lib/cmake")
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
@@ -28,9 +29,24 @@ find_package(Corrosion REQUIRED)
 
 include(corrosion_cxx.cmake)
 
-qt_add_executable(EbookTest cpp/main.cpp cpp/homemodel.cpp cpp/librarymodel.cpp cpp/homemodel.h cpp/rustutil.cpp cpp/rustutil.h
-        qml/main.qml qml/HomeView.qml qml/LibraryView.qml qml/EpubReader.qml)
-add_library_rust(PATH rust/client_lib NAMESPACE my)
-target_link_libraries(EbookTest
-        PUBLIC my::client_lib
-        PRIVATE Qt6::Quick Qt6::Core ssl)
+file(GLOB_RECURSE cpp ${CMAKE_SOURCE_DIR}/cpp*.cpp)
+file(GLOB_RECURSE headers ${CMAKE_SOURCE_DIR}/headers/*.h)
+file(GLOB_RECURSE qml ${CMAKE_SOURCE_DIR}/qml/*.qml)
+
+qt_add_executable(EbookTest ${cpp} ${headers} ${qml} cpp/librarymodel.cpp)
+
+option(WASM "Build for WASM" OFF)
+if (WASM)
+    set(CMAKE_TOOLCHAIN_FILE ${CMAKE_SOURCE_DIR}/emsdk/upstream/emscripten/cmake/Modules/Platform/Emscripten.cmake)
+    set(CMAKE_EXECUTABLE_SUFFIX ".wasm.js")
+    set_target_properties(EbookTest PROPERTIES LINK_FLAGS "-s WASM=1 -s EXPORTED_FUNCTIONS='[_main]'")
+    add_library_rust(PATH rust/wasm_layer NAMESPACE my)
+    target_link_libraries(EbookTest
+            PUBLIC my::wasm_layer
+            PRIVATE Qt6::Quick Qt6::Core ssl)
+else()
+    add_library_rust(PATH rust/cxx_layer NAMESPACE my)
+    target_link_libraries(EbookTest
+            PUBLIC my::cxx_layer
+            PRIVATE Qt6::Quick Qt6::Core ssl)
+endif()
